Fix h1 em and min-width on small devices.

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  min-width: 488px;
-  min-height: 800px;
+  min-width: 320px;
   padding: 16px;
   background-color: #8f59b7;
   background-image: none, radial-gradient(circle, rgba(255, 255, 255, 0.3021941198354342) 0%, rgba(130, 130, 130, 0.5963117668942577) 50%, rgba(0, 0, 0, 0.9016338957457983) 100%);
@@ -24,7 +23,7 @@ header {
   justify-content: center;
 
   h1 {
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: 300;
   }
 }
